// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useOnboardingHeader allows overwriting values 1`] = `
<OldHeader
  hideGoBackButton={true}
  icons={[]}
  theme="inverted"
  title="a title"
/>
`;

exports[`useOnboardingHeader should open language select drawer 1`] = `<Drawer />`;

exports[`useOnboardingHeader should set up the header correctly 1`] = `
<OldHeader
  icons={
    [
      {
        "color": "#FFFCFA",
        "id": "mail",
        "onPress": [Function],
      },
      {
        "color": "#FFFCFA",
        "id": "globe",
        "onPress": [Function],
      },
    ]
  }
  theme="inverted"
  title="a title"
/>
`;
